<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ro.unibuc.cs.memeow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_meme"
        android:name="ro.unibuc.cs.memeow.ui.editor.TemplateListFragment"
        android:label="@string/create_meme"
        tools:layout="@layout/layout_generic_list">
        <action
            android:id="@+id/action_select_template"
            app:destination="@id/edit_template_fragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_nav_create_meme_to_meme_list"
            app:destination="@id/meme_list_fragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/edit_template_fragment"
        android:name="ro.unibuc.cs.memeow.ui.editor.EditTemplateFragment"
        android:label="@string/edit_meme"
        tools:layout="@layout/fragment_edit_template">
        <action
            android:id="@+id/action_edit_to_viewMeme"
            app:destination="@id/meme_fragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/login_fragment"
        android:name="ro.unibuc.cs.memeow.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/meme_fragment"
        android:name="ro.unibuc.cs.memeow.ui.meme.MemeFragment"
        android:label="@string/view_meme"
        tools:layout="@layout/fragment_meme">
        <argument
            android:name="memeObject"
            app:argType="ro.unibuc.cs.memeow.model.PostedMeme" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="ro.unibuc.cs.memeow.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="profileUUID"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_profile_to_meme_history"
            app:destination="@id/meme_history_fragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="ro.unibuc.cs.memeow.ui.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/layout_generic_list">
        <action
            android:id="@+id/action_leaderboard_to_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/meme_history_fragment"
        android:name="ro.unibuc.cs.memeow.ui.meme.MemeHistoryFragment"
        android:label="{username}'s History"
        tools:layout="@layout/layout_generic_list">
        <argument
            android:name="profileUUID"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_login"
        app:destination="@id/login_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right" />
    <fragment
        android:id="@+id/meme_list_fragment"
        android:name="ro.unibuc.cs.memeow.ui.meme.MemeListFragment"
        android:label="{templateName} memes"
        tools:layout="@layout/layout_generic_list">
        <argument
            android:name="templateName"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_meme_fragment"
        app:destination="@id/meme_fragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out" />
</navigation>